# slack-glue

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
acceptance/: EVIDENCE.md  scenarios.md  test_acceptance.py
examples/: ask_hermetic.py  slack_event.py
src/slack_glue/: __init__.py  cli.py  database.py  formatting.py  router.py  schema.py  slack.py
src/slack_glue/fixtures/: shotgrid.json
tests/: conftest.py  test_cli.py  test_database.py  test_formatting.py  test_router.py  test_schema.py  test_slack.py
