[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slack-glue"
version = "0.1.0"
description = "A cross-department intent router: turn a messy Slack request into a strict, validated API query and execute it deterministically against a mock ShotGrid."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Edgar Hernandez", email = "edgarhernandez00@gmail.com" }]
keywords = ["slack", "shotgrid", "intent-router", "agent", "llm", "vfx", "production"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "replykit>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/eggy-sh/slack-glue"
Repository = "https://github.com/eggy-sh/slack-glue"

[project.scripts]
slack-glue = "slack_glue.cli:main"

[project.optional-dependencies]
# Provider-backed routing (NL -> schema) only needs replykit's adapter extras.
# The core tool works with no provider via replykit's ScriptedModel/MockModel.
openai = ["replykit[openai]>=0.1.0"]
anthropic = ["replykit[anthropic]>=0.1.0"]
cli = ["typer>=0.12", "rich>=13.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "typer>=0.12",
    "rich>=13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/slack_glue"]
# Ship the JSON fixture and the typing marker inside the wheel.
artifacts = ["src/slack_glue/fixtures/*.json", "src/slack_glue/py.typed"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Typer's documented pattern *requires* calling typer.Option/Argument in
# parameter defaults; B008 ("function call in default argument") is a false
# positive for this idiom.
"src/slack_glue/cli.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["slack_glue"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
